[field] Fix alignment of checkbox diff when label breaks multiline

--- a/packages/@sanity/field/src/types/boolean/diff/BooleanFieldDiff.css
+++ b/packages/@sanity/field/src/types/boolean/diff/BooleanFieldDiff.css
@@ -3,6 +3,7 @@
 .root {
   display: flex;
   padding: var(--small-padding) 0;
+  align-items: center;
 }
 
 .label {
